# cyberbabushka

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
templates/: app.py  index.html  pyproject.toml
templates/static/: styles.css
templates/static/static/: script.js
