[tool.poetry]
name = "cyberbabushka"
version = "0.1.0"
description = ""
authors = ["your_name <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1"
gunicorn = "^20.1"  # Эта строка добавится после команды poetry add gunicorn

[tool.poetry.dev-dependencies]
pytest = "^6.0"





